styles/global.css
body {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto, Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue, sans-serif;
  margin: 0;
  font-size: 17px;
  line-height: 1.65;
  text-rendering: optimizeSpeed;
}

:root {
  --green: #00A96b;
}

.container {
  max-width: 720px;
  margin: 0 auto;
}

nav {
  background: #08634a;
  text-align: center;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12),
    0 1px 5px 0 rgba(0, 0, 0, 0.2);
}

h1 {
  text-align: center;
}

h2, h3, h4 {
  margin-top: 1.5em;
}

a.green-link, div.main-content a, article a {
  cursor: pointer;
  color: var(--green);
  text-decoration: none;
  transition: all 100ms ease;
  border-bottom: 1px solid transparent;
}

a.green-link:hover, div.main-content a:hover, article a:hover {
  border-bottom: 1px solid var(--green);
}

p > ul, ol {
  padding: 0;
  margin-left: 1.5em;
}

p > ul {
  list-style-type: none;
}

p > ul > li {
  margin-bottom: 10px;
}

p > ul > li:before {
  content: '–';
}

p > ul > li:before {
  display: inline-block;
  color: #999;
  position: absolute;
  margin-left: -18px;
  transition: color 0.2s ease;
}

/*
code, pre {
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
  font-size: .92em;
  color: #D400FF;
}
*/

p > code, li > code {
  background: rgba(27,31,35,0.05);
  padding: 2px 5px;
}

blockquote {
  margin: 1.6em 0;
  padding: 5px 24px;
  background: rgba(0,0,0, 0.2);
}

input, button, textarea
{
  margin: 0;
  border: 1px solid #d1d1d1;
  border-radius: 5px;
  padding: .5em;
  vertical-align: middle;
  white-space: normal;
  background: none;
  line-height: 1;
  font-size: 1rem;
  font-family: inherit;
  transition: all 0.2s ease;
}

button {
  padding: .65em 1em;
  background: var(--green);
  color: #fff;
  border: none;
  cursor: pointer;
  text-transform: uppercase;
  transition: all 0.2s ease;
}
input:focus, textarea:focus, button:focus
{
  outline: 0;
  border-color: var(--green);
}
button:hover {
  background: rgba(0, 118, 255, 0.8);
}
button:focus {
  box-shadow: 0 0 0 2px rgba(0, 118, 255, 0.5);
}
button:disabled {
  pointer-events: none;
  background: #999;
}

img {
  max-width: 100%;
}

textarea {
  min-height: 300px;
  width: 100%;
  resize: none;
  margin: 1.4em 0;
  box-sizing: border-box;
}

hr {
  border: none;
  border-bottom: 1px solid #2d2f2d;
  margin: 2em auto;
}

footer {
  color: #757575;
  background: #f5f5f5;
  height: 10em;
  margin-top: 2em;
}

main {
  min-height: calc(100vh - 250px);
  padding: 0px 1rem;
}

@media (prefers-color-scheme: dark) {
  body   {
    background: #222;
    color: #fff;
  }

  nav {
    background: #184534;
  }

  footer {
    color: #AAA;
    background: #151815;
  }

  p > code, li > code {
    background: #2e3440;
    color: #99b285;
    padding: 0 5px;
  }

  blockquote {
    background: rgba(0,0,0, 0.5);
    color: #55796b;
  }

  article img {
    filter: brightness(0.8);
  }
}

